service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/part-of: jenkins
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: agent
      port: 50000
      targetPort: 50000
      # agent port remains exposed within cluster for JNLP agents
    # add https port
    - name: https
      port: 8443
      targetPort: 8443
